src/test/run-pass/attr-before-view-item2.rs
// error-pattern:expected item

module m {
  #[foo = "bar"]
  use std;
}

fn main() {
}
