src/test/compile-fail/attr-bad-meta.rs
// error-pattern:expected `]`

// asterisk is bogus
#[attr*]
module m { }
